Last changes fisr presentation

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Plunderer</title>
   </head>
   <body>
-    <div id="Header" class=""></div>
+    <div id="Page" class=""></div>
     <div id="Element" class="Element"></div>
     <div id="Footer" class=""></div>
   </body>
