--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="Page" class=""></div>
     <div id="Element" class="Personajes"></div>
-    <div id="ElementAPI" class="PersonajesAPI"></div>
+    <div id="ElementAPI"></div>
     <div id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
